--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,24 +1,25 @@
 name: CI
+
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [14.x]
+
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: yarn install
         run: |
           yarn install
@@ -31,9 +32,10 @@ jobs:
       - name: yarn build
         run: |
           yarn run build --if-present
+
       - name: Add remote origin
         run: |
-          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP }}.git
+          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP}}.git
       - name: Deploy to Heroku
         run: |
           git push heroku HEAD:main -f
